# intersalonica-business-intelligence-with-Python

./: Day_NumPy_SciPy.ipynb  README.md  pyproject.toml
data/: business_sales_trends.csv  customers.csv  daily_sales_data.csv  finance_performance.csv  imputed_file.csv  insurance_business_data.csv  marketing_performance.csv  output_sales.csv  regional_sales.csv  retail_orders.csv  sales.csv  sales.xml  sales_report.json  sales_targets.csv
output/: kpi_report.txt
src/day_01/: README.md  example2.py  example3.py
src/day_01/SessionA/: example1.py  example2.py  example3.py  finance.py
src/day_02/SessionA/: README.md  example0.py  example1.py  example2.py  example3.py  example4.py
src/day_02/SessionB/: example1.py  example2.py  example3.py  example4.py
src/day_03/SessionA/: README.nd  example1.py  example2.py  example3.py  example4.py
src/day_03/SessionB/: CleaningData.py  Example1.py  Example3.py  Example4.py  README.md  example2.py  imputation.py
src/day_05/: tellStory.py  visualize_sales.py
src/day_05/Scenario for DW and SCD -Northwind/: 0. instnwnd.sql.txt.sql  1. staging .txt.sql  2. dw .txt.sql  3. inserting.txt.sql  4.. changes in OLTP dimensions.txt.sql  5. SCD type2 for customer.txt.sql  6. see results.sql
src/day_07/: ex1,py  ex2.py  ex3.py  ex4.py  ex5.py
src/day_09/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py
src/day_09/SessionB/: ex1.py
src/day_6/: README.md  ex1.py  ex10.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py  ex7.py  ex8.py  ex9.py  extra.py  mock.py  spiral.py
src/day_8_pandas/: Day_Pandas.ipynb
