[project]
name = "day-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitris Iracleous",email = "diracleous@athtech.gr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyodbc (>=5.2.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "day_02", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
