[project]
name = "day-02"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitris Iracleous",email = "diracleous@athtech.gr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyodbc (>=5.2.0,<6.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dash (>=3.2.0,<4.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "pmdarima (>=2.1.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "day_02", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
